@@ -77,7 +77,7 @@
                        </object> 
                       </void> 
                       <void property="numReducers"> 
-                       <int>-1</int> 
+                       <int>1</int> 
                       </void> 
                       <void property="partitionCols"> 
                        <object class="java.util.ArrayList"/> 
@@ -894,12 +894,12 @@
      <object idref="tableDesc0"/> 
     </void> 
     <void property="numReduceTasks"> 
-     <int>-1</int> 
+     <int>1</int> 
     </void> 
     <void property="pathToAliases"> 
      <object class="java.util.LinkedHashMap"> 
       <void method="put"> 
-       <string>file:/data/users/zshao/sync/apache-trunk-HIVE-337-trunk/build/ql/test/data/warehouse/src</string> 
+       <string>file:/data/users/njain/hive_commit2/trunk/build/ql/test/data/warehouse/src</string> 
        <object class="java.util.ArrayList"> 
         <void method="add"> 
          <string>src</string> 
@@ -911,7 +911,7 @@
     <void property="pathToPartitionInfo"> 
      <object class="java.util.LinkedHashMap"> 
       <void method="put"> 
-       <string>file:/data/users/zshao/sync/apache-trunk-HIVE-337-trunk/build/ql/test/data/warehouse/src</string> 
+       <string>file:/data/users/njain/hive_commit2/trunk/build/ql/test/data/warehouse/src</string> 
        <object class="org.apache.hadoop.hive.ql.plan.partitionDesc"> 
         <void property="partSpec"> 
          <object class="java.util.LinkedHashMap"/> 
@@ -967,7 +967,7 @@
             </void> 
             <void method="put"> 
              <string>location</string> 
-             <string>file:/data/users/zshao/sync/apache-trunk-HIVE-337-trunk/build/ql/test/data/warehouse/src</string> 
+             <string>file:/data/users/njain/hive_commit2/trunk/build/ql/test/data/warehouse/src</string> 
             </void> 
            </object> 
           </void> 
@@ -993,7 +993,7 @@
               <void property="conf"> 
                <object class="org.apache.hadoop.hive.ql.plan.fileSinkDesc"> 
                 <void property="dirName"> 
-                 <string>/data/users/zshao/sync/apache-trunk-HIVE-337-trunk/ql/../build/ql/tmp/474335337.10001.insclause-0</string> 
+                 <string>/data/users/njain/hive_commit2/trunk/ql/../build/ql/tmp/263073162.10001.insclause-0</string> 
                 </void> 
                 <void property="tableInfo"> 
                  <object class="org.apache.hadoop.hive.ql.plan.tableDesc"> 
